fixed height of header to get the desired alignment

--- a/assets/css/arca.css
+++ b/assets/css/arca.css
@@ -48,6 +48,7 @@ body {
 
 .header {
 	padding-top: 5%;
+	min-height: 150px;
 }
 
 .logo {
